--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
         </div>
     </div>
     <script src="index.js"></script>
+    <script>
+        // JavaScript to handle redirection
+        window.onload = function() {
+          if (window.location.pathname === '/songs/') {
+            window.location.replace('/new-songs');
+          }
+        }
+      </script>
 </body>
 
 </html>
